# Qt-Creator

./: CMakeLists.txt  index.html  qtcreator_ide_branding.pri
.github/workflows/: build_cmake.yml  build_qbs.yml
cmake/: Findlibgit2.cmake  QtCreatorIDEBranding.cmake
qbs/imports/: QtcProduct.qbs
qbs/modules/libclang/: functions.js
qbs/modules/libgit2/: libgit2.qbs
qbs/modules/qbsbuildconfig/: qbsbuildconfig.qbs
qbs/modules/qtc/: qtc.qbs
scripts/: build.py  deploy.py  deployqt.py
share/qtcreator/themes/: dark.creatortheme  default.creatortheme  design-light.creatortheme  design.creatortheme  flat-dark.creatortheme  flat-light.creatortheme  flat.creatortheme
src/: src.qbs
src/app/: app.qbs
src/libs/: CMakeLists.txt  libs.qbs
src/libs/advanceddockingsystem/: dockareatabbar.cpp  dockareatitlebar.cpp  dockareawidget.cpp  dockcontainerwidget.cpp  dockfocuscontroller.cpp  dockmanager.cpp  dockoverlay.cpp  docksplitter.cpp  dockwidget.cpp  dockwidgettab.cpp  elidinglabel.cpp  floatingdockcontainer.cpp  floatingdragpreview.cpp  workspacedialog.cpp  workspacemodel.cpp  workspaceview.cpp
src/libs/aggregation/: aggregate.cpp
src/libs/clangsupport/: clangcodemodelclientproxy.cpp  clangcodemodelserverproxy.cpp  messageenvelop.h
src/libs/cplusplus/: CppRewriter.cpp  CppRewriter.h  ResolveExpression.cpp  TypePrettyPrinter.cpp  cppmodelmanagerbase.cpp
src/libs/libgit2cpp/: CMakeLists.txt  gitrepo.cpp  gitrepo.h  libgit2cpp.qbs  libgit2cpp_global.h
src/plugins/: CMakeLists.txt  plugins.qbs
src/shared/: CMakeLists.txt
tests/auto/: CMakeLists.txt  auto.qbs
(+1524 files in other folders)
